@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="iso-8859-1"?>
 <otrs_config version="1.0" init="Application">
-    <CVS>$Id: Ticket.xml,v 1.211 2008-11-12 22:02:12 shb Exp $</CVS>
+    <CVS>$Id: Ticket.xml,v 1.212 2008-11-13 12:05:23 martin Exp $</CVS>
     <ConfigItem Name="Ticket::Hook" Required="1" Valid="1">
         <Description Lang="en">The identifier for a ticket, e.g. Ticket#, Call#, MyTicket#. The default is Ticket#.</Description>
         <Description Lang="de">Ticket-Identifikator, z. B. Ticket#,Call#, MyTicket#. Als Standard wird Ticket# verwendet.</Description>
@@ -8511,18 +8511,6 @@ Thanks for your help!
         <Setting>
             <Hash>
                 <Item Key="Module">Kernel::System::PostMaster::Filter::MatchDBSource</Item>
-            </Hash>
-        </Setting>
-    </ConfigItem>
-    <ConfigItem Name="PostMaster::PreFilterModule###999-AgentInterface" Required="0" Valid="0">
-        <Description Lang="en">An email agent interface.</Description>
-        <Description Lang="de">Ein Email-Agent-Interface.</Description>
-        <Group>Ticket</Group>
-        <SubGroup>Core::PostMaster</SubGroup>
-        <Setting>
-            <Hash>
-                <Item Key="Module">Kernel::System::PostMaster::Filter::AgentInterface</Item>
-                <Item Key="AgentInterfaceAddress">otrs-agent@example.org</Item>
             </Hash>
         </Setting>
     </ConfigItem>
